src/tests/snapshots/cendol__tests__semantic_assignment_validation__assign_incompatible_pointers.snap
---
source: src/tests/semantic_assignment_validation.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: type mismatch: expected <pointer>, found <pointer>
Span: SourceSpan(source_id=SourceId(2), start=105, end=110)
