src/tests/snapshots/cendol__tests__semantic_assignment_validation__assign_int_to_enum.snap
---
source: src/tests/semantic_assignment_validation.rs
expression: output
---
Diagnostics count: 0
