src/tests/snapshots/cendol__tests__semantic_assignment_validation__assign_int_to_pointer.snap
---
source: src/tests/semantic_assignment_validation.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: type mismatch: expected <pointer>, found int
Span: SourceSpan(source_id=SourceId(2), start=54, end=59)
