src/tests/snapshots/cendol__tests__semantic_assignment_validation__assign_struct_mismatch.snap
---
source: src/tests/semantic_assignment_validation.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: type mismatch: expected struct A, found struct B
Span: SourceSpan(source_id=SourceId(2), start=140, end=145)
